--- a/porto.html
+++ b/porto.html
@@ -9,7 +9,6 @@
       rel="stylesheet"
     />
     <style>
-      /* ===== GLOBAL ===== */
       * {
         margin: 0;
         padding: 0;
@@ -155,7 +154,7 @@
         color: #081b29;
       }
 
-      /* ===== MOBILE (max 600px) ===== */
+      /* MOBILE */
       @media only screen and (max-width: 600px) {
         .home {
           flex-direction: column;
@@ -210,7 +209,7 @@
         }
       }
 
-      /* ===== TABLET (min 601px) ===== */
+      /* TABLET */
       @media only screen and (min-width: 601px) {
         .home {
           flex-direction: row;
@@ -221,15 +220,15 @@
         }
         .hero-image {
           order: 0;
-          width: 35%; /* foto sedikit lebih besar */
-          max-width: 400px; /* batas maksimal */
+          width: 35%; 
+          max-width: 400px; 
           height: auto;
           aspect-ratio: 1 / 1;
           margin: 0 40px 0 0;
         }
         .hero-content {
           flex: 1;
-          max-width: 550px; /* teks lebih sempit */
+          max-width: 550px; 
         }
         .hero-content h1 {
           font-size: 40px;
@@ -255,7 +254,7 @@
         }
       }
 
-      /* ===== LAPTOP (min 992px) ===== */
+      /* LAPTOP */
       @media only screen and (min-width: 992px) {
         .hero-image {
           width: 420px;
@@ -276,7 +275,7 @@
         }
       }
 
-      /* ===== DESKTOP BESAR (min 1200px) ===== */
+      /* DESKTOP BESAR */
       @media only screen and (min-width: 1200px) {
         .hero-image {
           width: 500px;
@@ -330,10 +329,10 @@
           <a href="#">Let's Talk</a>
         </div>
         <div class="home-sci">
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.instagram.com/alfindraxyaka?igsh=OHNra2V5a3Z1YnVs&utm_source=qr"><i class="fa-brands fa-instagram"></i></a>
           <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-          <a href="#"><i class="fa-brands fa-threads"></i></a>
-          <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+          <a href="https://www.threads.com/@alfindraxyaka?igshid=NTc4MTIwNjQ2YQ=="><i class="fa-brands fa-threads"></i></a>
+          <a href="https://x.com/shikimoreng?s=21"><i class="fa-brands fa-x-twitter"></i></a>
         </div>
       </div>
     </section>
@@ -348,3 +347,4 @@
     </script>
   </body>
 </html>
+
