--- a/porto.html
+++ b/porto.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <style>
+      /* ===== GLOBAL ===== */
       * {
         margin: 0;
         padding: 0;
@@ -154,7 +155,7 @@
         color: #081b29;
       }
 
-      /* MOBILE */
+      /* ===== MOBILE (max 600px) ===== */
       @media only screen and (max-width: 600px) {
         .home {
           flex-direction: column;
@@ -209,7 +210,7 @@
         }
       }
 
-      /* TABLET */
+      /* ===== TABLET (min 601px) ===== */
       @media only screen and (min-width: 601px) {
         .home {
           flex-direction: row;
@@ -220,15 +221,15 @@
         }
         .hero-image {
           order: 0;
-          width: 35%; 
-          max-width: 400px; 
+          width: 35%; /* foto sedikit lebih besar */
+          max-width: 400px; /* batas maksimal */
           height: auto;
           aspect-ratio: 1 / 1;
           margin: 0 40px 0 0;
         }
         .hero-content {
           flex: 1;
-          max-width: 550px; 
+          max-width: 550px; /* teks lebih sempit */
         }
         .hero-content h1 {
           font-size: 40px;
@@ -254,7 +255,7 @@
         }
       }
 
-      /* LAPTOP */
+      /* ===== LAPTOP (min 992px) ===== */
       @media only screen and (min-width: 992px) {
         .hero-image {
           width: 420px;
@@ -275,7 +276,7 @@
         }
       }
 
-      /* DESKTOP BESAR */
+      /* ===== DESKTOP BESAR (min 1200px) ===== */
       @media only screen and (min-width: 1200px) {
         .hero-image {
           width: 500px;
@@ -319,20 +320,29 @@
         <h1>Hi, I'm Muhammad Alfindra Rahman</h1>
         <h3>Frontend Developer</h3>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla quas
-          autem iste fugiat maiores eligendi commodi porro, eveniet aspernatur
-          aperiam cumque laboriosam repellendus animi laudantium, nemo modi
-          placeat, numquam earum!
+          I am a 7th-semester student at Indraprasta PGRI University with a
+          strong passion for IT. I have gained experience as an admin and
+          professional game booster. Currently, I am focusing on building my
+          career as a Front-End Developer. Let’s connect and don’t forget to
+          join me for a game of Roblox :D
         </p>
         <div class="btn-box">
           <a href="#">Hire Me</a>
           <a href="#">Let's Talk</a>
         </div>
         <div class="home-sci">
-          <a href="https://www.instagram.com/alfindraxyaka?igsh=OHNra2V5a3Z1YnVs&utm_source=qr"><i class="fa-brands fa-instagram"></i></a>
+          <a
+            href="https://www.instagram.com/alfindraxyaka?igsh=OHNra2V5a3Z1YnVs&utm_source=qr"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
           <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-          <a href="https://www.threads.com/@alfindraxyaka?igshid=NTc4MTIwNjQ2YQ=="><i class="fa-brands fa-threads"></i></a>
-          <a href="https://x.com/shikimoreng?s=21"><i class="fa-brands fa-x-twitter"></i></a>
+          <a
+            href="https://www.threads.com/@alfindraxyaka?igshid=NTc4MTIwNjQ2YQ=="
+            ><i class="fa-brands fa-threads"></i
+          ></a>
+          <a href="https://x.com/shikimoreng?s=21"
+            ><i class="fa-brands fa-x-twitter"></i
+          ></a>
         </div>
       </div>
     </section>
@@ -347,4 +357,3 @@
     </script>
   </body>
 </html>
-
