--- a/porto.html
+++ b/porto.html
@@ -9,7 +9,6 @@
       rel="stylesheet"
     />
     <style>
-      /* ===== GLOBAL ===== */
       * {
         margin: 0;
         padding: 0;
@@ -155,7 +154,7 @@
         color: #081b29;
       }
 
-      /* ===== MOBILE (max 600px) ===== */
+      /* MOBILE */
       @media only screen and (max-width: 600px) {
         .home {
           flex-direction: column;
@@ -210,7 +209,7 @@
         }
       }
 
-      /* ===== TABLET (min 601px) ===== */
+      /* TABLET */
       @media only screen and (min-width: 601px) {
         .home {
           flex-direction: row;
@@ -221,15 +220,15 @@
         }
         .hero-image {
           order: 0;
-          width: 35%; /* foto sedikit lebih besar */
-          max-width: 400px; /* batas maksimal */
+          width: 35%; 
+          max-width: 400px; 
           height: auto;
           aspect-ratio: 1 / 1;
           margin: 0 40px 0 0;
         }
         .hero-content {
           flex: 1;
-          max-width: 550px; /* teks lebih sempit */
+          max-width: 550px;
         }
         .hero-content h1 {
           font-size: 40px;
@@ -255,7 +254,7 @@
         }
       }
 
-      /* ===== LAPTOP (min 992px) ===== */
+      /*LAPTOP */
       @media only screen and (min-width: 992px) {
         .hero-image {
           width: 420px;
@@ -276,7 +275,7 @@
         }
       }
 
-      /* ===== DESKTOP BESAR (min 1200px) ===== */
+      /*DESKTOP BESAR */
       @media only screen and (min-width: 1200px) {
         .hero-image {
           width: 500px;
@@ -320,11 +319,10 @@
         <h1>Hi, I'm Muhammad Alfindra Rahman</h1>
         <h3>Frontend Developer</h3>
         <p>
-          I am a 7th-semester student at Indraprasta PGRI University with a
-          strong passion for IT. I have gained experience as an admin and
-          professional game booster. Currently, I am focusing on building my
-          career as a Front-End Developer. Let’s connect and don’t forget to
-          join me for a game of Roblox :D
+          I’m a 7th-semester IT student at Indraprasta PGRI University,
+          passionate about technology and front-end development. I also have
+          experience as an admin and professional game booster let’s connect
+          (and maybe play some Roblox too! :D)
         </p>
         <div class="btn-box">
           <a href="#">Hire Me</a>
