--- a/porto.html
+++ b/porto.html
@@ -220,8 +220,8 @@
         }
         .hero-image {
           order: 0;
-          width: 35%; 
-          max-width: 400px; 
+          width: 35%;
+          max-width: 400px;
           height: auto;
           aspect-ratio: 1 / 1;
           margin: 0 40px 0 0;
@@ -325,8 +325,8 @@
           (and maybe play some Roblox too! :D)
         </p>
         <div class="btn-box">
-          <a href="#">Hire Me</a>
-          <a href="#">Let's Talk</a>
+          <a href="contact.html">Hire Me</a>
+          <a href="contact.html">Let's Talk</a>
         </div>
         <div class="home-sci">
           <a
