--- a/porto.html
+++ b/porto.html
@@ -325,8 +325,8 @@
           (and maybe play some Roblox too! :D)
         </p>
         <div class="btn-box">
-          <a href="contact.html">Hire Me</a>
-          <a href="contact.html">Let's Talk</a>
+          <a href="contact.html">Mabar Bang</a>
+          <a href="contact.html">P MABAR</a>
         </div>
         <div class="home-sci">
           <a
@@ -355,3 +355,4 @@
     </script>
   </body>
 </html>
+
